force-app/main/default/objects/Interaction__c/fields/ContactC_Interaction__c.field-meta.xml
<CustomField>
    <fullName>ContactC_Interaction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ContactC Interaction</label>
    <referenceTo>ContactC__c</referenceTo>
    <relationshipLabel>Interactions with contact</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>