force-app/main/default/objects/Interaction__c/fields/Interaction_date__c.field-meta.xml
<CustomField>
    <fullName>Interaction_date__c</fullName>
    <description>Date field to record the date of the interaction.</description>
    <label>Interaction date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>