force-app/main/default/objects/Interaction__c/fields/Interaction_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Notes__c</fullName>
    <description>Text area field to document details of the interaction (e.g., discussion points, action items).</description>
    <label>Interaction Notes</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>