force-app/main/default/objects/Interaction__c/fields/Interaction_type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_type__c</fullName>
    <description>Picklist field to categorize the type of interaction</description>
    <label>Interaction type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>